# auto-soc

./: .env.example  .gitignore  README.md  mcp_config.json  pyproject.toml
auto_soc/: config.py  orchestrator.py
auto_soc/agents/: case_management_agent.py  red_team_agent.py  siem.py  system_emulator.py  system_emulator_agent.py  threat_intel.py
auto_soc/models/: case_management.py  red_team.py  siem.py  system_emulator.py  threat_intel.py
auto_soc/stores/: system_emulator_store.py
auto_soc/utils/: azure_model.py  ollama_model.py
docs/: design_review.md  technical_specification.md
scripts/: logfire_query.py
